Update the layout and responsiveness of ranges info. - In opus.css (line 1986-2043), update the css styling for ranges info.   Now the dropdown width will be the max-content, ranges min and max data   will never wrap. When browser is wide, ranges names will not wrap. When   browser is less than 950px, ranges names will start to wrap by word   (break point 950px). When browser is less than 650px, ranges names will   wrap by letter. - In widgets.js (line 715-721), for ranges info with long name, we make   it wrap by letter at the beginning. This will prevent the long name from   overlapping with data.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1983,15 +1983,21 @@ ul.ui-autocomplete a.ui-state-active {
     overflow-x: hidden;
     border-width: 2px;
     /* Set the width of ranges dropdown */
-    width: 80%;
-    max-width: 100%;
+    width: max-content;
+    max-width: 110%;
     word-break: keep-all;
 }
 
-/* Make ranges dropdown take 100% width when dropdown width is narrow */
 @media (max-width: 950px) {
-    .op-preprogrammed-ranges .op-scrollable-menu {
-        width: max-content;
+    /* When widget width is narrow, allow ranges names to be wrapped by words */
+    .op-preprogrammed-ranges-data-name, .op-preprogrammed-ranges-data-header {
+        white-space: normal;
+    }
+}
+@media (min-width: 950px) {
+    /* When widget width is wide, don't wrap ranges names */
+    .op-preprogrammed-ranges-data-name, .op-preprogrammed-ranges-data-header {
+        white-space: nowrap;
     }
 }
 
@@ -2000,23 +2006,41 @@ ul.ui-autocomplete a.ui-state-active {
     white-space: normal;
 }
 
-/* Make ranges names to break by letters (not word) when dropdown width is narrow */
 @media (max-width: 650px) {
+    /* Make ranges names to break by letters (not word) when dropdown width is narrow */
     .op-preprogrammed-ranges .op-scrollable-menu .op-preprogrammed-ranges-data-name {
         word-break: break-all;
     }
+
+    .op-preprogrammed-ranges-data-name {
+        padding-right: 0 !important;
+    }
+}
+
+/* Make sure ranges data is not wrapped into multiple lines */
+.op-preprogrammed-ranges-min-data, .op-preprogrammed-ranges-max-data {
+    white-space: nowrap;
 }
 
 /* Make sure the fractional part of ranges data is not cutoff */
-.op-preprogrammed-ranges .op-scrollable-menu .row {
-    padding-right: 1em;
+.op-preprogrammed-ranges .op-scrollable-menu .op-preprogrammed-ranges-data-item {
+    padding-right: 2em;
+}
+
+/* This class will be assigned to ranges name with long first word */
+.op-word-break-all {
+    word-break: break-all;
+}
+
+.op-preprogrammed-ranges-data-name {
+    padding-right: 2em;
 }
 
 /* Styling required to make ranges data aligned by decimal point */
 .op-integer {
     text-align: right;
     display: inline-block;
-    width: 100%;
+    width:  100%;
 }
 
 /* Add customized styling for dropdown list items */
